[gd_scene load_steps=15 format=3 uid="uid://c5brxcdu3i0g4"]

[ext_resource type="Theme" uid="uid://bihy5f3ktx2ep" path="res://scenes/ui/game_ui_theme.tres" id="1_17uwj"]
[ext_resource type="Script" uid="uid://csu3ot5gmqn28" path="res://scenes/ui/inventory_panel.gd" id="2_b11k6"]
[ext_resource type="Texture2D" uid="uid://cje45dxhkhwmg" path="res://assets/game/objects/collectibles.png" id="3_tdvod"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3uk"]
atlas = ExtResource("3_tdvod")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cvy6a"]
load_path = "res://.godot/imported/collectibles.png-ecf9765c291a27fedb27ec09ce008cc3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_lcq1t"]
atlas = SubResource("CompressedTexture2D_cvy6a")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b11k6"]
load_path = "res://.godot/imported/collectibles.png-ecf9765c291a27fedb27ec09ce008cc3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = SubResource("CompressedTexture2D_b11k6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4tgr1"]
load_path = "res://.godot/imported/collectibles.png-ecf9765c291a27fedb27ec09ce008cc3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_wmmu1"]
atlas = SubResource("CompressedTexture2D_4tgr1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7yjab"]
load_path = "res://.godot/imported/collectibles.png-ecf9765c291a27fedb27ec09ce008cc3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_us7qi"]
atlas = SubResource("CompressedTexture2D_7yjab")
region = Rect2(64, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eqitx"]
load_path = "res://.godot/imported/collectibles.png-ecf9765c291a27fedb27ec09ce008cc3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_u6o1n"]
atlas = SubResource("CompressedTexture2D_eqitx")
region = Rect2(80, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_17uwj")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_b11k6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Bota" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Bota"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_ta3uk")

[node name="BotaLabel" type="Label" parent="MarginContainer/VBoxContainer/Bota"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Chapeu" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Chapeu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_lcq1t")

[node name="ChapeuLabel" type="Label" parent="MarginContainer/VBoxContainer/Chapeu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Chimarrao" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Chimarrao"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tdvod")

[node name="ChimarraoLabel" type="Label" parent="MarginContainer/VBoxContainer/Chimarrao"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Gaita" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Gaita"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_wmmu1")

[node name="GaitaLabel" type="Label" parent="MarginContainer/VBoxContainer/Gaita"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Laco" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Laco"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_us7qi")

[node name="LacoLabel" type="Label" parent="MarginContainer/VBoxContainer/Laco"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Livro" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Livro"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_u6o1n")

[node name="LivroLabel" type="Label" parent="MarginContainer/VBoxContainer/Livro"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
